--- a/login.html
+++ b/login.html
@@ -17,12 +17,11 @@
         <div class="form-group">
             <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto" placeholder="Username">
             <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto" placeholder="Password">
-            <a class="float-end mb-3 mr-4" href="#">Forgot Password</a>
         </div>
-            <button style="width:320px;" class="btn btn-primary btn-outline-light mx-auto bg-dark">Get Started</button>
-            <p>Don't have an account?</p>
-            <a href="#">SIGN UP</a>
-
+        <a class="text-end mr-auto mb-3 text-white" href="#">Forgot Password</a>
+        <button style="width:320px;" class="btn btn-primary btn-outline-light mx-auto bg-dark">Get Started</button>
+        <p class="text-white mt-3 text-center mb-1">Don't have an account?</p>
+        <a class="text-white text-center mb-5" href="#">SIGN UP</a>
     </div><!-- End of Login card -->
     
 </body>
