--- a/login.html
+++ b/login.html
@@ -15,10 +15,10 @@
         <h2 class="card-title text-white text-center">Welcome</h2>
         <p class="text-white text-center text-muted">Sign in by entering the information below</p>
         <div class="form-group">
-            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto" placeholder="Username">
-            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto" placeholder="Password">
+            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto bg-dark text-light" placeholder="Username">
+            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto bg-dark text-light" placeholder="Password">
         </div>
-        <a class="text-end mr-auto mb-3 text-white" href="#">Forgot Password</a>
+        <a class="text-end mb-3 text-white" href="#">Forgot Password</a>
         <button style="width:320px;" class="btn btn-primary btn-outline-light mx-auto bg-dark">Get Started</button>
         <p class="text-white mt-3 text-center mb-1">Don't have an account?</p>
         <a class="text-white text-center mb-5" href="#">SIGN UP</a>
