--- a/login.html
+++ b/login.html
@@ -5,23 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Login Page</title>
 </head>
 <body class="bg-secondary">
     <h3 class="text-center mt-5 mb-5">Login <span><strong>#09</strong></span></h3>
 
-    <div class="card bg-dark mx-auto" style="width: 22rem;">
-        <img class="rounded-circle mx-auto mt-4 mb-2" src="https://source.unsplash.com/random?w=100&h=100" height="100" width="100" alt="">
-        <h2 class="card-title text-white text-center">Welcome</h2>
-        <p class="text-white text-center text-muted">Sign in by entering the information below</p>
-        <div class="form-group">
-            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto bg-dark text-light" placeholder="Username">
-            <input type="text" style="width:320px;" class="form-control mb-3 border-bottom mx-auto bg-dark text-light" placeholder="Password">
+    <div class="card bg-dark mx-auto mb-3" style="width: 22rem;">
+        <div class="card-body text-center">
+            <img class="rounded-circle mx-auto mt-4 mb-2" src="https://source.unsplash.com/random?w=100&h=100" height="100" width="100" alt="">
+            <h2 class="card-title text-white text-center">Welcome</h2>
+            <p class="text-white text-center text-muted">Sign in by entering the information below</p>
+            <div class="form-group">
+                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="Username">
+                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="Password">
+            </div>
+            <a class="float-end mb-3 text-white" href="#">Forgot Password</a>
+            <button style="width:320px;" class="btn mx-auto bg-light">Get Started</button>
+            <p class="text-white mt-3 text-center mb-1">Don't have an account?</p>
+            <a class="text-white text-center mb-5" href="#">SIGN UP</a>
         </div>
-        <a class="text-end mb-3 text-white" href="#">Forgot Password</a>
-        <button style="width:320px;" class="btn btn-primary btn-outline-light mx-auto bg-dark">Get Started</button>
-        <p class="text-white mt-3 text-center mb-1">Don't have an account?</p>
-        <a class="text-white text-center mb-5" href="#">SIGN UP</a>
     </div><!-- End of Login card -->
     
 </body>
