--- a/login.html
+++ b/login.html
@@ -16,14 +16,17 @@
             <img class="rounded-circle mx-auto mt-4 mb-2" src="https://source.unsplash.com/random?w=100&h=100" height="100" width="100" alt="">
             <h2 class="card-title text-white text-center">Welcome</h2>
             <p class="text-white text-center text-muted">Sign in by entering the information below</p>
-            <div class="form-group has-feedback">
-                <img class="form-control-feedback" src="images/user.png" width="20" height="02" alt="">
-                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="   Username">
+
+            <div class="form-group">
+                <img src="images/user.png" width="20" height="02" alt="">
+                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="    Username">
             </div>
-            <div class="form-group has-feedback">
-                <img class="form-control-feedback" src="images/lock.png" width="20" height="20"alt="">
-                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="   Password">
+
+            <div class="form-group">
+                <img src="images/lock.png" width="20" height="20"alt="">
+                <input type="text" style="width:320px;" class="form-control mb-3 mx-auto bg-dark text-light" placeholder="    Password">
             </div>
+
             <a class="float-end mb-3 text-white" href="#">Forgot Password</a>
             <button style="width:320px;" class="btn mx-auto bg-light">Get Started</button>
             <p class="text-white mt-3 text-center mb-1">Don't have an account?</p>
